--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    ports:
+      - 8000:8000
     volumes:
       - '.:/app'
     depends_on:
