Added backend products with search

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
   },
-  "watchOptions": {
-    "watchFile": "dynamicprioritypolling",
-    "watchDirectory": "dynamicprioritypolling",
-    "fallbackPolling": "dynamicpriority"
-  }
+  // "watchOptions": {
+  //   "watchFile": "dynamicprioritypolling",
+  //   "watchDirectory": "dynamicprioritypolling",
+  //   "fallbackPolling": "dynamicpriority"
+  // }
 }
