--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "node express api server for node-ambassador",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --legacy-watch src/index.ts",
-    "seed:ambassadors": "ts-node src/seeder/ambassador.seeder.ts",
-    "seed:products": "ts-node src/seeder/product.seeder.ts",
-    "seed:links": "ts-node src/seeder/link.seeder.ts",
-    "seed:orders": "ts-node src/seeder/order.seeder.ts"
+    "start": "chcp 65001 && nodemon src/index.ts",
+    "seed:ambassadors": "chcp 65001 && ts-node src/seeder/ambassador.seeder.ts",
+    "seed:products": "chcp 65001 && ts-node src/seeder/product.seeder.ts",
+    "seed:links": "chcp 65001 && ts-node src/seeder/link.seeder.ts",
+    "seed:orders": "chcp 65001 && ts-node src/seeder/order.seeder.ts",
+    "update:rankings": "chcp 65001 && ts-node src/seeder/ranking.ts"
   },
   "repository": {
     "type": "git",
