--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.7",
+    "@types/nodemailer": "^6.4.14",
     "@types/sanitize-html": "^2.9.5",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
@@ -45,8 +46,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
     "redis": "^4.6.12",
